# rights-parser-rust

./: .env  Cargo.toml  Modelfile  debug-llm.sh  kalki-full.txt  kalki-parsed.json  setup.sh  test.sh
examples/: rights_parser_client.py
migrations/: schema.sql
src/: encryption.rs  ipfs_client.rs  json_builder.rs  llm_service.rs  main.rs  models.rs  pdf_extractor.rs  worker.rs
